# kiro-test

./: .gitignore  Cargo.toml  README.md  verify_structure.md  verify_task2_completion.md
.kiro/specs/lightweight-screenshot-app/: design.md  implementation_status.md  requirements.md  tasks.md
docs/: README.md
examples/: README.md  capture_demo.rs  debug_capture.rs
src/: capture.rs  editor_app.rs  lib.rs  main.rs  types.rs
tests/: capture_integration_test.rs
