[package]
name = "lightweight-screenshot-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = "0.24"
egui = "0.24"

# Image processing
image = "0.24"
screenshots = "0.3"

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Cross-platform channels
crossbeam-channel = "0.5"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Windows API
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "winbase",
    "handleapi",
    "errhandlingapi",
] }

[[example]]
name = "capture_demo"
doc-scrape-examples = true

[[example]]
name = "debug_capture"
doc-scrape-examples = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true